-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
4.8.1
-
None
Subclasses of QDeclarativePropertyMap have a wrong metaObject(): instead of returning the metaObject of the subclass, QDeclarativePropertyMap's metaObject() is returned.
I noticed this because I added a slot called "
onOriginChanged()" to my subclass, but then I cannot connect a signal to it:
Object::connect: No such slot QDeclarativePropertyMap::onOriginChanged()
It seems that QDeclarativePropertyMap plays some weird tricks with the QObjectPrivate structure.