Allow access to signals and slots in QQmlPropertyMap inheritors

Allow inheritors of QQmlPropertyMap to pass the static meta object
information needed to support their signals and slots.  If the correct
pointer is not provided to the constructor, it is not accessible via
the virtual metaObject() function during construction.

Task-number: QTBUG-26400
Change-Id: Ide8c6d3568e4abd4c48e0aa60e6fa05a9c2a11cf
Reviewed-by: Martin Jones <martin.jones@nokia.com>